--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <!-- endbuild -->
     <!-- build:maincss assets/stylesheets/main.css -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/app.css">
     <!-- endinject -->
     <!-- endbuild -->
 </head>
