added server log directory

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
 
 <!-- build:libjs assets/javascripts/lib.js -->
 <!-- bower:js -->
+<script src="angular/angular.js"></script>
+<script src="angular-ui-router/release/angular-ui-router.js"></script>
 <!-- endbower -->
 <!-- inject:lib:js -->
 <!-- endinject -->
