add example angularjs app structure

--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,7 @@
     <!-- endbuild -->
 </head>
 <body >
-</div>
-
+<ui-view></ui-view>
 <!-- build:libjs assets/javascripts/lib.js -->
 <!-- bower:js -->
 <script src="angular/angular.js"></script>
