--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- build:libcss assets/stylesheets/lib.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="normalize.css/normalize.css" />
     <!-- endbower -->
     <!-- inject:lib:css -->
     <!-- endinject -->
