fix issue in usemin error

--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,1 +1,1 @@
-<p>Hello, {{vm.getPrefix()}} <strong>{{vm.name}}</strong>!</p>
+<p>Hello, {{vm.getPrefix()}} <strong class="hello-world">{{vm.name}}</strong>!</p>
