--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <title>Hello</title>
 
-    <!-- build:libcss assets/stylesheets/lib.css -->
+    <!-- ex-build:libcss assets/stylesheets/lib.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="normalize.css/normalize.css" />
     <!-- endbower -->
     <!-- inject:lib:css -->
     <!-- endinject -->
@@ -19,8 +18,8 @@
     <!-- endbuild -->
 </head>
 <body >
-<ui-view></ui-view>
-<!-- build:libjs assets/javascripts/lib.js -->
+<div ui-view></div>
+<!-- ex-build:libjs assets/javascripts/lib.js -->
 <!-- bower:js -->
 <!-- endbower -->
 <!-- inject:lib:js -->
